--- a/inst/api/Dockerfile
+++ b/inst/api/Dockerfile
@@ -34,16 +34,18 @@ RUN apt-get -y update && apt-get -f install -y \
 RUN R -e "install.packages('remotes', repos = 'http://cran.us.r-project.org')" -e "install.packages('RSQLite', repos = 'http://cran.us.r-project.org')" -e "install.packages('sf', configure.args = '--with-proj-include=/proj_home/include --with-proj-lib=/proj_home/lib --with-proj-api=no')" -e "remotes::install_github('cjcallag/ps50sr', force = TRUE)"
 
 ## Expose port
+EXPOSE 3838
 EXPOSE 591
+EXPOSE 8080
 
 # Set non-root
 RUN useradd shiny_user
 USER shiny_user
 
 # Run app on container start
-CMD ["R", "-e", "ps50sr::launch_api()"]
+CMD ["R", "-e", "ps50sr::launch_api(docs = FALSE, port = 591)"]
 
 # Running the Dockerfile
 ## cd inst/api/
-## docker build -t csg-api-image .
+## docker build -t csg-api-image . --no-cache
 ## docker run -d --rm -p 591:591 csg-api-image
